fix overflow body

--- a/assets/css/generic.css
+++ b/assets/css/generic.css
@@ -20,7 +20,7 @@ body{
   font-size: 18px;
   font-family: "fira_mono", verdana;
   color: #5D5D5D;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 ul{
